// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractInlineFields **Rating**:: 6 1`] = `
Array [
  Object {
    "property": "**Rating**",
    "raw": "**Rating**:: 6",
    "value": " 6",
  },
]
`;

exports[`extractInlineFields **Thoughts**:: It was decent. 1`] = `
Array [
  Object {
    "property": "**Thoughts**",
    "raw": "**Thoughts**:: It was decent.",
    "value": " It was decent.",
  },
]
`;

exports[`extractInlineFields [mood:: okay] | [length:: 2 hours] 1`] = `
Array [
  Object {
    "property": "mood",
    "raw": "[mood:: okay]",
    "value": " okay",
  },
  Object {
    "property": "length",
    "raw": "[length:: 2 hours]",
    "value": " 2 hours",
  },
]
`;

exports[`extractInlineFields [subject :: mood:: okay] | [subject :: length:: 2 hours] 1`] = `
Array [
  Object {
    "property": " mood",
    "raw": "[subject :: mood:: okay]",
    "subject": "subject ",
    "value": " okay",
  },
  Object {
    "property": " length",
    "raw": "[subject :: length:: 2 hours]",
    "subject": "subject ",
    "value": " 2 hours",
  },
]
`;

exports[`extractInlineFields No inline fields 1`] = `Array []`;

exports[`extractInlineFields Too :: many :: inline :: fields  1`] = `Array []`;

exports[`extractInlineFields inline :: field 1`] = `
Array [
  Object {
    "property": "inline ",
    "raw": "inline :: field",
    "value": " field",
  },
]
`;

exports[`extractInlineFields nested ( inline :: field ) 1`] = `
Array [
  Object {
    "property": " inline ",
    "raw": "( inline :: field )",
    "value": " field ",
  },
]
`;

exports[`extractInlineFields nested ( subject :: inline :: field ) 1`] = `
Array [
  Object {
    "property": " inline ",
    "raw": "( subject :: inline :: field )",
    "subject": " subject ",
    "value": " field ",
  },
]
`;

exports[`extractInlineFields subject :: **Rating**:: 6 1`] = `
Array [
  Object {
    "property": " **Rating**",
    "raw": "subject :: **Rating**:: 6",
    "subject": "subject ",
    "value": " 6",
  },
]
`;

exports[`extractInlineFields subject :: **Thoughts**:: It was decent. 1`] = `
Array [
  Object {
    "property": " **Thoughts**",
    "raw": "subject :: **Thoughts**:: It was decent.",
    "subject": "subject ",
    "value": " It was decent.",
  },
]
`;

exports[`extractInlineFields subject :: inline :: field 1`] = `
Array [
  Object {
    "property": " inline ",
    "raw": "subject :: inline :: field",
    "subject": "subject ",
    "value": " field",
  },
]
`;

exports[`removeInlineFields **Rating**:: 6 1`] = `""`;

exports[`removeInlineFields **Thoughts**:: It was decent. 1`] = `""`;

exports[`removeInlineFields [mood:: okay] | [length:: 2 hours] 1`] = `" | "`;

exports[`removeInlineFields [subject :: mood:: okay] | [subject :: length:: 2 hours] 1`] = `" | "`;

exports[`removeInlineFields No inline fields 1`] = `"No inline fields"`;

exports[`removeInlineFields Too :: many :: inline :: fields  1`] = `"Too :: many :: inline :: fields "`;

exports[`removeInlineFields inline :: field 1`] = `""`;

exports[`removeInlineFields nested ( inline :: field ) 1`] = `"nested "`;

exports[`removeInlineFields nested ( subject :: inline :: field ) 1`] = `"nested "`;

exports[`removeInlineFields subject :: **Rating**:: 6 1`] = `""`;

exports[`removeInlineFields subject :: **Thoughts**:: It was decent. 1`] = `""`;

exports[`removeInlineFields subject :: inline :: field 1`] = `""`;
